# Dynamic-Programming-and-Markov-Decision-Process

./: .gitignore  README.md  main.py  pre.py  pyproject.toml
legacy/: pre.py
output/: american_put_table.csv  trading_summary.md
output/slides/: main.aux  main.nav  main.out  main.toc
slides/: main.tex
speech/: talk_script.md
src/mdp_presentation/: __init__.py  algorithms.py  cli.py  examples.py  models.py  plotting.py  reporting.py
